feat: support modify bucket structure
